<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/easy"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/easy"/>
    <item
        android:id="@+id/advanced"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/advanced"/>
    <item
        android:id="@+id/hard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/hard"/>
    <item
        android:id="@+id/restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/restart"/>
    <item
        android:id="@+id/quit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/quit"/>

</menu>