<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    >
    
    <TextView 
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:gravity="center"
        />
	<ImageView 
		android:id="@+id/image"
		android:contentDescription="@string/desc"
    	android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/label"
        
    />
    <Button
        android:id="@+id/back"
     	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:text="@string/back"
     	android:layout_alignParentBottom="true"
     	android:layout_alignParentRight="true"
     	
     	
     /> 
    

</RelativeLayout>